# Algo-Trading-Bot

./: .env  Cargo.toml
src/: analysis.rs  binance_client.rs  client.rs  logger.rs  main.rs  model.rs  news_filter.rs  simulator.rs  telegram.rs
