[package]
name = "algo_trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.19", features = ["native-tls"] }
chrono = "0.4"
dotenv = "0.15"
rayon = "1.7"
ta = "0.5"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
futures-util = "0.3"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
rand = "0.9.2"
url = "2.5.8"
quick-xml = { version = "0.31", features = ["serialize"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
